Added bottom info

--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.mohfw.gov.in/">MoHFW Website</a>
+                                <a class="nav-link" href="https://www.mohfw.gov.in/">
+                                <button type="button" class="btn btn-primary" ><strong>MoHFW Website</strong></button>
+                                </a>
                             </li>
                     </div>
             </nav>
@@ -166,6 +168,9 @@
                 <div class="container" id="vaccinesite" style="padding-top:20px">
 
                 </div>
+                <nav class="navbar fixed-bottom navbar-light bg-light " style="text-align:center;display: inline-block;">
+                  <a class="navbar-brand"  href="https://apisetu.gov.in/public/marketplace/api/cowin">Made with Co-WIN Public APIs from API Setu </a>
+                </nav>
             </div>
 
 
