--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
             .then(response => response.json())
             .then(result => {
                 document.querySelector("#district").innerHTML = '';
-
                 document.querySelector("#district").innerHTML = '<option value=0 selected>Select District</option>';
                 for (let district of result.districts){
                   document.querySelector("#district").innerHTML += `<option value=${district.district_id}>${district.district_name}</option>`;
                 }
-
             });
         }
 
@@ -85,24 +83,9 @@
             .then(result => {
                 document.querySelector("#vaccinesite").innerHTML = '';
 
-                if(result.sessions.length == 0){
-                document.querySelector("#vaccinesite").innerHTML = `
-                <div class="container">
-                <div class="alert alert-danger text-center" role="alert">
-                    No Vaccine sessions available right now.
-                </div>
-                </div>`;
-                }
-                else{
-                document.querySelector("#vaccinesite").innerHTML = `
-                <div class="container">
-                <div class="alert alert-success text-center" role="alert">
-                    Available vaccine sessions in ${document.querySelector("#district").options[document.querySelector("#district").selectedIndex].text} district.
-                </div>
-                </div>`;
-                }
 
 
+                var session_num=0;
                 for (let session of result.sessions){
 
                     var session_show=false;
@@ -117,6 +100,7 @@
                     }
 
                 if(session_show == true){
+                    session_num++;
                   document.querySelector("#vaccinesite").innerHTML += `
                       <!--<div class = "container p-3 my-3 border rounded-lg">
                         Center Name         : <strong>${session.name}</strong><br>
@@ -127,7 +111,6 @@
 
                         <div class="container p-3 my-3 border rounded-lg">
                           <div class="row">
-
                             <div class="col">
                             Center Name         : <strong>${session.name}</strong><br>
                             Area                : <strong>${session.block_name}</strong><br>
@@ -138,25 +121,35 @@
                             Vaccine Available: <strong>${session.vaccine}</strong>
                           </div>
                           </div>
-
                         </div>
-
                   `;
-
-
                 }
                 }
-
+                if(session_num == 0){
+                    document.querySelector("#message").innerHTML = `
+                    <div class="container">
+                    <div class="alert alert-danger text-center" role="alert">
+                        No Vaccine sessions available right now.
+                    </div>
+                    </div>`;
+                }
+                else{
+                    document.querySelector("#message").innerHTML = `
+                    <div class="container">
+                    <div class="alert alert-success text-center" role="alert">
+                        Vaccine sessions available in ${document.querySelector("#district").options[document.querySelector("#district").selectedIndex].text} district : ${session_num}
+                    </div>
+                    </div>`;
+                }
             });
         }
-
         </script>
 
     </head>
     <body style="padding-bottom: 70px;">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand">Covid Vaccine Availability</a>
+                <a class="navbar-brand" href=""><i class="fas fa-syringe"></i> Covid Vaccine Availability </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -178,28 +171,26 @@
             <div class="body container">
                 <form style="padding-top:20px">
                     <div class="form-row">
-
-                        <div class="col">
+                        <div class="col-sm">
                           <select class="custom-select my-1 mr-sm-2" id="state">
                                 <option selected>Select State</option>
                           </select>
                         </div>
-                        <div class="col">
-                        <select class="custom-select my-1 mr-sm-2" id="district">
-                            <option selected>Select District</option>
-                        </select>
+                        <div class="col-sm">
+                            <select class="custom-select my-1 mr-sm-2" id="district">
+                                <option selected>Select District</option>
+                            </select>
                         </div>
-                        <div class="col"style="padding-top:4px;">
+                        <div class="col-sm"style="padding-top:4px;">
                             <input class="form-control"  id="date" type="date" name="date" placeholder="Date"  />
                         </div>
-
-
                     </div>
 
                     <div class="form-row">
-                        <div class="col-3">
+                        <div class="col-3-sm">
                         </div>
-                        <div class="col-6" style="margin: auto;display: flex; align-items: center;padding-top:10px">
+
+                        <div class="col-6-sm" style="margin: auto;display: flex; align-items: center;padding-top:10px">
                             <div class="btn-group btn-group-toggle" data-toggle="buttons" onchange="run();">
                               <label class="btn btn-secondary " disabled>
                                  Select Vaccine:
@@ -217,20 +208,14 @@
                             <button type="button" class="btn btn-primary" onclick="run();" style ="margin-left:20px;"><strong>Search</strong></button>
                         </div>
 
-                        <div class="col-3">
-
+                        <div class="col-3-sm">
                         </div>
                     </div>
-
                 </form>
-
-
-
-                <div class="container" id="vaccinesite" style="padding-top:20px">
-
+                <div class="container" id="message" style="padding-top:20px">
                 </div>
-
-
+                <div class="container" id="vaccinesite">
+                </div>
                 <nav class="navbar fixed-bottom navbar-light bg-light " style="text-align:center;display: inline-block;">
                   <a class="navbar-brand"  href="https://apisetu.gov.in/public/marketplace/api/cowin">Made with Co-WIN Public APIs from API Setu </a>
                 </nav>
