--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     if (document.querySelector("#v3").checked == true && session.vaccine == "COVAXIN"){
                             session_show = true;
                     }
-                    if (document.querySelector("#v3").checked == true && session.vaccine == "Sputnik V"){
+                    if (document.querySelector("#v3").checked == true && session.vaccine == "SPUTNIK V"){
                             session_show = true;
                     }
 
